# Traffic-AutoLabel

./: .gitignore  README.md  auto_labeling.py  auto_labeling_rag.py  auto_labeling_v2.py  batch_test.py  batch_test_results.json  demo.py  demo_glm.py  demo_rag_flow.py  download_test_image.py  gemini_fix_test.py  glm_4_6v_example.py  hong_kong_traffic_signs.txt  motorcycle_safety_signs.txt  pyproject.toml  quick_test.py  quick_test_glm.py  rag_sign_classifier.py  requirements.txt  simple_test.py  test_local.py  test_recognition.py  two_stage_classifier.py  video_data_labeler.py  visual_fewshot_classifier.py  visualize_annotations.py  visualize_v2.py
.chromadb/: chroma.sqlite3
D2_dataset/: RAG_IMPLEMENTATION.md
D2_dataset/annotations/: D2_frame_0000.json  D2_frame_0001.json  D2_frame_0002.json  D2_frame_0003.json  D2_frame_0004.json  D2_frame_0005.json  D2_frame_0006.json  D2_frame_0007.json  D2_frame_0008.json  D2_frame_0009.json  D2_frame_0010.json  D2_frame_0011.json  D2_frame_0012.json  D2_frame_0013.json  D2_frame_0014.json  D2_frame_0015.json  D2_frame_0016.json  D2_frame_0017.json  D2_frame_0018.json  D2_frame_0019.json  D2_frame_0020.json  D2_frame_0021.json  D2_frame_0022.json  D2_frame_0023.json  D2_frame_0024.json  D2_frame_0025.json  D2_frame_0026.json  D2_frame_0027.json  D2_frame_0028.json  D2_frame_0029.json  D2_frame_0030.json  D2_frame_0031.json  D2_frame_0032.json  D2_frame_0033.json  D2_frame_0034.json  D2_frame_0035.json  (+247 more)
docs/: D2_annotation_report.md  LABEL_TAXONOMY.md  MIGRATION_SUMMARY.md  TERMINAL_GUIDE.md  WORKFLOW_MANUAL.md
examples/: example_modular.py
glm_labeling/: __init__.py  config.py
scripts/: auto_labeling_parallel.py  auto_labeling_universal.py  generate_report.py  split_video.py  test_sign_ui.py  video_to_dataset.py  video_to_dataset_async.py  visualize_universal.py
(+27 files in other folders)
